# A3S-FL

./: .gitignore  README.md  main.py  pyproject.toml  run_simulation.py  s7.py  s9.py
clients/: a3s-client-0.py  main.py  s0.py  s1.py  s2.py  s3.py  s4.py  s5.py  s6.py  s8.py
clients/a3s-client-0/: main.py  pyproject.toml
clients/a3s-client-1/: main.py  pyproject.toml
clients/a3s-client-2/: main.py  pyproject.toml
clients/a3s-client-3/: main.py  pyproject.toml
clients/a3s-client-4/: main.py  pyproject.toml
clients/a3s-client-5/: main.py  pyproject.toml
clients/a3s-client-6/: main.py  pyproject.toml
clients/a3s-client-7/: main.py  pyproject.toml
clients/a3s-client-8/: main.py  pyproject.toml
clients/a3s-client-9/: main.py  pyproject.toml
data/: .gitignore  client_metadata.json  conversion.py  data_processing.py  data_split_iid.py  data_splitting.py  dirichlet0.5_clients10.json  get_semantic_data.py  get_test_data.py
models/: cnn_model.py
server/: client_selection.py  client_weighting_data_based.py  client_weighting_performance_based.py  plot_data.py  pyproject.toml  server.py  server_with_agent.py
